very long strings no longer break the non-array situation

--- a/src/style/page.css
+++ b/src/style/page.css
@@ -50,8 +50,12 @@ div#cells.presentation {
 /************************************************/
 /* cell output styles */
 
+.rep-container {
+  overflow-x: auto;
+}
+
 .array-rep {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .data-set-info {
